--- a/PeliculasAPI/appsettings.json
+++ b/PeliculasAPI/appsettings.json
@@ -1,10 +1,12 @@
 {
-    "CadenaDeConexion":  "Esta es la cadena de conexion a produccion",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "origenesPermitidos": "http://localhost:4200"
 }
