--- a/PeliculasAPI/appsettings.json
+++ b/PeliculasAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
+        //"DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
     },
     "Logging": {
         "LogLevel": {
