--- a/PeliculasAPI/appsettings.json
+++ b/PeliculasAPI/appsettings.json
@@ -9,5 +9,6 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "origenesPermitidos": "http://localhost:4200"
+    "origenesPermitidos": "http://localhost:4200",
+    "llavejwt": "ASDFASDFASDFASDFASDFASDFASDFASDF"
 }
