--- a/PeliculasAPI/appsettings.json
+++ b/PeliculasAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
-        //"DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ASISSISTEMAS02\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=FmcSistemas2;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PeliculasAPI;User Id=sa;Password=root;TrustServerCertificate=True"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
